--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-switch": "^7.0.0",
     "react-toastify": "^9.1.1",
     "simple-crypto-js": "^3.0.1",
+    "unsplash-js": "^7.0.15",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
