--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^0.1.11",
     "axios": "^1.2.2",
     "crypto-js": "^4.1.1",
     "nanoid": "^4.0.0",
