--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^0.1.11",
     "axios": "^1.2.2",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "crypto-js": "^4.1.1",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
