landing page - mobile

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.2",
     "body-scroll-lock": "^4.0.0-beta.0",
     "crypto-js": "^4.1.1",
+    "framer-motion": "^10.2.1",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
